--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@dr.pogodin/react-helmet": "^3.0.6",
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
+    "@nanostores/react": "^1.0.0",
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^4.11.5",
     "eslint": "^9.39.2",
@@ -21,6 +22,7 @@
     "eslint-plugin-react-refresh": "^0.5.0",
     "globals": "^17.3.0",
     "lucide-react": "^0.563.0",
+    "nanostores": "^1.1.0",
     "react": "^19.2.4",
     "react-calendly": "^4.4.0",
     "react-dom": "^19.2.4",
