--- a/package.json
+++ b/package.json
@@ -10,29 +10,30 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "^4.4.2",
     "@dr.pogodin/react-helmet": "^3.0.6",
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
     "@nanostores/react": "^1.0.0",
-    "@tailwindcss/vite": "^4.1.18",
-    "astro": "^4.11.5",
-    "eslint": "^9.39.2",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.5.0",
-    "globals": "^17.3.0",
     "lucide-react": "^0.563.0",
     "nanostores": "^1.1.0",
     "react": "^19.2.4",
     "react-calendly": "^4.4.0",
-    "react-dom": "^19.2.4",
-    "react-router-dom": "^7.13.0",
-    "tailwindcss": "^4.1.18"
+    "react-dom": "^19.2.4"
   },
   "overrides": {
     "node-pty": "npm:node-pty-prebuilt-multiarch@0.10.1-pre.5"
   },
   "devDependencies": {
-    "@tailwindcss/aspect-ratio": "^0.4.2"
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@astrojs/react": "^4.4.2",
+    "@astrojs/sitemap": "^3.7.0",
+    "@tailwindcss/vite": "^4.1.18",
+    "astro": "5.15.9",
+    "eslint": "^9.39.2",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.5.0",
+    "globals": "^17.3.0",
+    "react-router-dom": "^7.13.0",
+    "tailwindcss": "^4.1.18"
   }
 }
