--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "node-pty": "npm:node-pty-prebuilt-multiarch@0.10.1-pre.5"
   },
   "devDependencies": {
-    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@astrojs/react": "^4.4.2",
     "@astrojs/sitemap": "^3.7.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/vite": "^4.1.18",
-    "astro": "5.15.9",
+    "astro": "^5.17.1",
     "eslint": "^9.39.2",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.5.0",
